Fix padding on mobile drop-down menu (#8), fix theme color in header (#9)

--- a/wardbulletin/main/static/main/css/dist-all.css
+++ b/wardbulletin/main/static/main/css/dist-all.css
@@ -36530,8 +36530,8 @@ video {
   visibility: visible;
 }
 
-.peer:checked ~ .peer-checked\:max-h-48 {
-  max-height: 12rem;
+.peer:checked ~ .peer-checked\:max-h-52 {
+  max-height: 13rem;
 }
 
 .prose-a\:text-blue-500 :is(:where(a):not(:where([class~="not-prose"] *))) {
