--- a/wardbulletin/main/static/main/css/dist-blue.css
+++ b/wardbulletin/main/static/main/css/dist-blue.css
@@ -1678,8 +1678,8 @@ video {
   visibility: visible;
 }
 
-.peer:checked ~ .peer-checked\:max-h-48 {
-  max-height: 12rem;
+.peer:checked ~ .peer-checked\:max-h-52 {
+  max-height: 13rem;
 }
 
 .prose-a\:text-blue-500 :is(:where(a):not(:where([class~="not-prose"] *))) {
